Archive2/cb/81fc6ab1fbb523/output
main.cpp: In function 'int main()':
main.cpp:42:13: error: no matching function for call to 'Uka::Uka()'
         Uka uka;
             ^
main.cpp:42:13: note: candidates are:
main.cpp:22:9: note: Uka::Uka(UkaSapProvider&)
         Uka(UkaSapProvider& uka_sap_provider) : uka_sap_provider_(uka_sap_provider) { }
         ^
main.cpp:22:9: note:   candidate expects 1 argument, 0 provided
main.cpp:21:12: note: constexpr Uka::Uka(const Uka&)
     struct Uka : public UkaSapUser {
            ^
main.cpp:21:12: note:   candidate expects 1 argument, 0 provided
main.cpp:21:12: note: constexpr Uka::Uka(Uka&&)
main.cpp:21:12: note:   candidate expects 1 argument, 0 provided
